[project]
name = "alice-reworked"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.80.0",
    "fastapi>=0.135.1",
    "jupyter>=1.1.1",
    "kuzu>=0.7.0",
    "networkx>=3.6.1",
    "numpy>=1.26.0",
    "openai>=1.0.0",
    "pyvis>=0.3.2",
    "requests>=2.32.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.21.2",
    "uvicorn>=0.42.0",
]

[project.scripts]
ingest = "services.ingest.cli:app"
alice  = "services.chat.cli:root_app"

[project.optional-dependencies]
mlx = [
    "mlx-lm>=0.21.0",
]
vllm = ["openai>=1.0.0"]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["services", "core"]

[tool.setuptools.packages.find]
include = ["services*", "core*"]
